@@ -1,0 +1,9 @@
+Cross-platform utilities for prompting the user for credentials or a
+passphrase, for example to authenticate with a server or read a
+protected key. Includes native programs for MacOS and Windows, hence
+no 'tcltk' is required. Password entry can be invoked in two different
+ways: directly from R via the askpass() function, or indirectly as
+password-entry back-end for 'ssh-agent' or 'git-credential' via the
+SSH_ASKPASS and GIT_ASKPASS environment variables. Thereby the user
+can be prompted for credentials or a passphrase if needed when R calls
+out to git or ssh.
