@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3357 2019/08/09 19:01:07 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3358 2019/08/09 19:02:20 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5480,3 +5480,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added sysutils/R-ps version 1.3.0 [brook 2019-08-09]
 	Added devel/R-testthat version 2.2.1 [brook 2019-08-09]
 	Added devel/R-desc version 1.2.0 [brook 2019-08-09]
+	Added security/R-askpass version 1.1 [brook 2019-08-09]
